fix: fix text-align in a button

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -412,11 +412,11 @@ button:active {
   margin-right: 135px;
 }
 
-.feed__text_down a {
+.feed__text__link {
   position: relative;
 }
 
-.feed__text_down a::after {
+.feed__text__link::after {
   position: absolute;
   content: '';
   height: 1px;
@@ -425,6 +425,10 @@ button:active {
   margin: 0 auto;
   left: 0;
   right: 0;
+}
+
+.feed__text__link:hover {
+  color: var(--second-border-color);
 }
 
 .feed__second-title {
@@ -491,6 +495,7 @@ button:active {
 
 .feed__button {
   background: var(--orange);
+  text-align: center;
 }
 
 .testimonials {
